k8s/10-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: netchaos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: netchaos-api:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add: ["NET_ADMIN"]
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: netchaos
spec:
  selector:
    app: api
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
